--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,8 +8,8 @@ build:
     python: "3.9"
 
 sphinx:
-  configuration: docs/conf.py
+  configuration: conf.py
 
 python:
   install:
-    - requirements: docs/requirements.txt
+    - requirements: requirements.txt
